force-app/main/default/objects/Order_Product__c/Order_Product__c.object-meta.xml
<CustomObject>
    <label>Order Product</label>
    <nameField>
        <displayFormat>OP{0000000000}</displayFormat>
        <label>Order Line No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>