force-app/main/default/objects/Order_Product__c/fields/Customer_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Region__c</fullName>
    <formula>Text(Order__r.Customer__r.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Sales Region</label>
    <type>Text</type>
</CustomField>