force-app/main/default/objects/Order_Product__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <formula>Order__r.Hisense_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hisense Entity</label>
    <type>Text</type>
</CustomField>