force-app/main/default/objects/Order_Product__c/fields/IsChange__c.field-meta.xml
<CustomField>
    <fullName>IsChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*IsChange</label>
    <type>Checkbox</type>
</CustomField>