force-app/main/default/objects/Order_Product__c/fields/Order_Classification__c.field-meta.xml
<CustomField>
    <fullName>Order_Classification__c</fullName>
    <formula>Order__r.Order_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Classification</label>
    <type>Text</type>
</CustomField>