force-app/main/default/objects/Order_Product__c/fields/Order_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Text__c</fullName>
    <formula>Order__r.SAP_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Text</label>
    <type>Text</type>
</CustomField>