force-app/main/default/objects/Order_Product__c/fields/Order_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_Name__c</fullName>
    <formula>Order__r.Order_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type Name</label>
    <type>Text</type>
</CustomField>