force-app/main/default/objects/Order_Product__c/fields/Product_Export_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Export_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Order Product (Product Export Model)</relationshipLabel>
    <relationshipName>Order_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>