force-app/main/default/objects/Order_Product__c/fields/SAP_Order_Item_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Item_No__c</fullName>
    <label>SAP Order Item No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>