force-app/main/default/objects/Order_Product__c/fields/SAP_Product_Export_Model__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Export_Model__c</fullName>
    <label>SAP Product Export Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>