force-app/main/default/objects/Order_Product__c/fields/SAP_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Product Line</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Mapping__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>&quot;Business Scope and Product Line Mapping&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>Order Product</relationshipLabel>
    <relationshipName>Order_Product</relationshipName>
    <type>Lookup</type>
</CustomField>