force-app/main/default/objects/Order_Product__c/fields/SAP_Product_Line_SO__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Line_SO__c</fullName>
    <label>SAP Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>