force-app/main/default/objects/Order_Product__c/fields/Share_Account_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Share_Account_Product_Line__c</fullName>
    <formula>Order__r.Customer__r.Customer_SF_Code__c + SAP_Product_Line__r.Mapping_Code__c</formula>
    <label>*Share Account Product Line</label>
    <type>Text</type>
</CustomField>