force-app/main/default/objects/Order_Product__c/fields/sumInvoiceItem__c.field-meta.xml
<CustomField>
    <fullName>sumInvoiceItem__c</fullName>
    <label>sumInvoiceItem</label>
    <summaryForeignKey>Invoice_Item__c.Sales_Order_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>