force-app/main/default/objects/Order_Product__c/fields/Total_Amount_After_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_After_Rebate__c</fullName>
    <label>Net Amount(After Rebate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>