force-app/main/default/objects/Order_Product__c/fields/Total_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Amount__c</fullName>
    <label>Order Amount(EX VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>