force-app/main/default/objects/Order_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>SO0006384562</value>
    </filters>
    <label>All</label>
</ListView>